--- a/templates/index-fi.html
+++ b/templates/index-fi.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sirpa-Tuomaala-Art</title>
-    <link rel="stylesheet" href="./assets/css/reset.css" />
-    <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
-    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='reset.css')}}" />
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='stylesheet.css')}}" />
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles.css')}}" />
   </head>
   <body>
     <main>
@@ -17,7 +17,7 @@
             <!-- Logo -->
             <div class="logo">
               <img
-                src="./assets/img/header-logo.svg"
+                src="{{url_for('static', filename='header-logo.svg')}}"
                 width="90"
                 height="90"
                 alt="Logo"
@@ -41,7 +41,7 @@
             <div class="main-painting">
               <img
                 class="painting-photo"
-                src="./assets/img/mainpage-img.svg"
+                src="{{url_for('static', filename='mainpage-img.svg')}}"
                 width="657px"
                 height="538px"
                 alt="Lemon butterfly"
